...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--User Input View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="UserInputViewController" customModule="GithubRecents" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="SVJ-xD-Sco">
                                <rect key="frame" x="167" y="64" width="80" height="80"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Supply an owner and a public repo to pull the most recent commit data" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoCon
                                <rect key="frame" x="40" y="185" width="334" height="41"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" systemColor="systemRedColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="nick-havz" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uY0-L4-Tdm">
                                <rect key="frame" x="20" y="269" width="374" height="34"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="34" id="yBq-KF-jHr"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KVf-If-loF">
                                <rect key="frame" x="176.5" y="457" width="61" height="34"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="34" id="a9a-VV-oIz"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                <state key="normal" title="FETCH!"/>
                                <state key="disabled" title="LOADING..."/>
                                <connections>
                                    <action selector="onFetchButtonTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="nXW-Hi-PbR"/>
                                </connections>
                            </button>
                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="SPx-el-OGz">
                                <rect key="frame" x="192" y="501" width="30" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="er6-FH-3aw"/>
                                    <constraint firstAttribute="width" constant="30" id="hVx-Jp-phU"/>
                                </constraints>
                            </activityIndicatorView>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="100" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qgs-9L-KcN">
                                <rect key="frame" x="20" y="403" width="374" height="34"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="34" id="pQj-cI-4jk"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
...
